...
    <string name="toast_wait_to_scan_chains">Scanning in progress: Please wait for completion</string>
    <string name="unselected_token">Enable chains for selected tokens?</string>
    <string name="no_title">(No title)</string>
    <string name="title_session_details">Session Details</string>
    <string name="title_session_proposal">Session Proposal</string>
    <string name="message_wc_wallet_different_from_active_wallet">Wallet different from active wallet.</string>
    <string name="settings_title_analytics">Analytics</string>
    <string name="settings_title_crash_reporting">Crash Reporting</string>
    <string name="message_share_anonymous_data">Help us to improve SetlOne by sharing your anonymous data with us. This does not include any financial information.</string>
    <string name="share_anonymous_data">Share Anonymous Data?</string>
    <string name="enable_required_chains">Enable required chains?</string>
    <string name="enable_required_chains_message">Selected tokens are on chains currently not selected, enable unselected chains?</string>
    <string name="dialog_title_search_token">Search for Token?</string>
...
