<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">

    <include layout="@layout/layout_simple_toolbar" />

    <View
        android:id="@+id/separator"
        style="@style/Aw.Component.Separator"
        android:layout_below="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/network_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator">

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <com.setlone.app.widget.StandardHeader
                android:id="@+id/mainnet_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/mainnet"
                app:showSwitch="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.setlone.app.widget.StandardHeader
                android:id="@+id/testnet_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/testnet"
                app:showSwitch="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/test_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.setlone.app.widget.StandardHeader
                android:id="@+id/tron_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/tron_network"
                app:showSwitch="false" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tron_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
