<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.setlone.app.widget.BottomSheetHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/Aw.Typography.Title.Large.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/large_32"
        android:text="@string/title_dialog_what_testnet" />

    <TextView
        android:id="@+id/message"
        style="@style/Aw.Typography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cozy_20"
        android:layout_marginVertical="@dimen/standard_16"
        android:gravity="center"
        android:lineSpacingMultiplier="1.8"
        android:text="@string/message_dialog_testnet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enable_testnet_action"
        style="@style/Aw.Component.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_16"
        android:text="@string/action_enable_testnet" />

</LinearLayout>


