...
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/standard_16"
        android:visibility="gone" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/tiny_8"
        android:clickable="true"
...
