...
            android:layout_width="@dimen/base_24"
            android:layout_height="@dimen/base_24"
            android:layout_marginStart="@dimen/small_12"
            android:src="@drawable/ic_search_small" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp8"
            android:layout_marginEnd="@dimen/dp16"
            android:background="@null"
            android:hint="@string/search_for_tokens"
...
