...
                android:layout_marginStart="@dimen/small_12"
                android:layout_toEndOf="@id/token_definition_name"
                android:textColor="@color/surface_dark"
                tools:text="Token Name" />

            <ImageView
                android:id="@+id/image_lock"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_locked"
                android:visibility="gone"
...
