...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/select_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:useMaterialThemeColors="false"
            app:buttonTint="@color/selector_button_tint"
            tools:checked="true"
...
